--- a/0_Executive_Summary.Rmd
+++ b/0_Executive_Summary.Rmd
@@ -172,7 +172,7 @@ Exploitation rates on `r spp` exceeded MSY proxy target harvest rates during the
 
 \begin{enumerate}
 
-\item The current data for `r spp` weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models the used the median to the 2017 steepness prior (0.72) resulted in an estimated a stock size near unfished conditions leading to low survey catchabiltiy for the NWFSC shelf-slope survey which were deemed implausible by the Scientific and Statistical Committee (SSC).  A steepness value in the final model was determined by calculating spawning biomass across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated which corresponded with a steepness value of 0.50.  Additional research for alternative methods for determining an appropriate steepness values when traditional approaches do not seem appropriate.  
+\item The current data for `r spp` weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models the used the mean to the 2017 steepness prior (0.72) resulted in an estimated a stock size near unfished conditions leading to low survey catchabiltiy for the NWFSC shelf-slope survey which were deemed implausible by the Scientific and Statistical Committee (SSC).  A steepness value in the final model was determined by calculating spawning biomass across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated which corresponded with a steepness value of 0.50.  Additional research for alternative methods for determining an appropriate steepness values when traditional approaches do not seem appropriate.  
 
 \item `r spp` off the US west coast may be a fraction of a much large population extending into Canada or even Alaska. Modelling only a part of the total population might contribute to the lack of correspondence between the survey indices and other data sources, as seen in the ln($R0$) profiles and age-structured production model diagnostics as well as some of the observation variability. While this comment is not intended to reflect badly on the STAT's capabilities, it is important to recognize that stock structure could potentially be a major source of uncertainty regarding the assessment results.
   
